# langchain-async-app-example

./: .env.example  README.md  docker-compose.yml  ingest.py  pyproject.toml
app/: chat_memory.py  chat_message_history.py  config.py  database.py  main.py  models.py  vectorstore.py
app/langchain_ext/indexes/: index.py
app/langchain_ext/memory/: chat_memory.py  chat_message_history.py
app/langchain_ext/vectorstores/: base.py  pgvector.py
